--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,15 @@
 version: '3.1'
 
 services:
+  myapp:
+    build: nginx/.
+    container_name: myapp
+    restart: always
+    ports:
+      - 8080:80
+    volumes:
+      - ./nginx/html:/usr/share/nginx/html
+
   mysql:
     image: mysql:8
     container_name: mysql
